--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header id="cabecalho">
-      <h1 id="titulo">Lições Aprendidas na Trybe!</h1>
+      <h1 class="titulo">Lições Aprendidas na Trybe!</h1>
       <nav>
         <ul>
           <li><a href="#">Home</a></li>
@@ -40,7 +40,7 @@
     <div class="lados">
       <section id="lado">
         <article class="lado-esquerdo">
-          <h4>Aprendizado</h4>
+          <h3>Aprendizado</h3>
           <p>
             O Grupo, a Equipe, a Trybe é algo diferenciado, algo que só vivendo
             pra saber! Não dá para resumir o que aprendemos e desenvolvemos em
@@ -51,7 +51,7 @@
           </p>
         </article>
         <aside class="lado-direito">
-          <h4>Uma rápida passagem...</h4>
+          <h3>Uma rápida passagem...</h3>
           <p>
             A viagem de aprendizagem é interminável, ninguém lhe ensina
             realmente como aprender. O foco está sobretudo no que aprender. Mas
@@ -61,8 +61,8 @@
       </section>
       </div>
       <section id="licoes">
-        <section id="licoes_a_apre">
-          <h3>Lições Aprendidas</h3>
+        <section class="licoes_a_apre">
+          <h4>Lições Aprendidas</h4>
           <ol id="licoes_aprendidas">
             <li>Inteligencia Emocional</li>
             <li>Empatia</li>
@@ -76,8 +76,8 @@
             <li>HTML semântico</li>
           </ol>
         </section>
-        <section id="licoes_a_apre">
-          <h3>Lições a Aprender</h3>
+        <section class="licoes_a_apre">
+          <h4>Lições a Aprender</h4>
           <ul id="licoes_a_aprender">
             <li>JavaScript e lógica de programação</li>
             <li>Criatividade</li>
@@ -93,7 +93,7 @@
         </section>
     </main>
     <section id="genios">
-      <h3>Inventores</h3>
+      <h5>Inventores</h5>
       <table>
         <tr>
           <th>Nome</th>
