Adicionar classes lado-direito e lado-esquerdo

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </table>
         </section>
 
-        <article id="artigo" class="fundos_secoes exceto_secoes">
+        <article id="artigo" class="fundos_secoes exceto_secoes lado-esquerdo">
             <p>
                 Neste curto periodo de aprendizado na trybe, aprendi muito, nunca pensaria que em menos de 2 semanas eu
                 estivesse criando já sites com html, css, com uma ótima semantica, e uma gama de ferramentas que nem
@@ -80,7 +80,7 @@
                 vir. <a class="style_link" href="https://www.betrybe.com/formacao" target="_Blank">Veja...</a>
             </p>
         </article>
-        <aside id="aside_breve_passagem" class="fundos_secoes exceto_secoes">
+        <aside id="aside_breve_passagem" class="fundos_secoes exceto_secoes lado-direito">
             <p>Tive que desenvolver um wallet do 0, sem saber nem sequer o que era orientação a objetos e muito
                 menos um banco de dados relacional. Mas corri muito, pesquisei, estudei e consegui.</p>
         </aside>
