--- a/index.html
+++ b/index.html
@@ -6,30 +6,33 @@
     <title>Projeto 1</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-    <header><h1> Projeto 1 - Lições aprendidas</h1>
-        <img src ="oie_7mbgcqpjn3sh.jpg" class="foto">
+    <header id ="cabecalho"><h1> Projeto 1 - Lições aprendidas</h1>
+        <img src ="oie_7mbgcqpjn3sh.jpg" id="minha_foto">
     ￼    <nav>
     ￼      <ul>
-        <li>sdkscm</li>
-        <li>oiefjkf</li>
             </ul>
     ￼    </nav>
     ￼</header>
 <body>
-    
-
+    <main id="licoes_aprendidas">
+            <ul>
+                1
+                2
+                3
+                4
+                5
+                6
+                7
+                8
+                9
+                10
+            </ul>   </main>
     <article>
         ocjdsn,dmsçdm
+        <section>
+            fwekdcsmçfmadsç
+        </section>
     </article>
-
-
-
-
-
-
-    <footer class ="rodape">
-
-
-    </footer>
+    <footer class ="rodape"></footer>
 </body>
 </html>
