adicionando section sobre mim

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
           target="_blank"
           >Meu Linkedin 👈</a
         >
+        <section id="sobre-mim">
+          <h2>Gabriel Castro</h2>
+          <p>Estudante de Desenvolvimento de Software na Trybe.</p>
+          <em>Manaus, AM.</em>
+        </section>
       <section>
         <table>
           <ol id="licoes_aprendidas">
