Adiciona novos itens a tabela Virtudes e corrige erros de resoluçao da tela

--- a/index.html
+++ b/index.html
@@ -79,21 +79,21 @@
                 <th id="id_table"> Virtudes para Ingressar e Estudar na Trybe </th>
             </tr>
             <tr>
-                <td> Força de vontade  |  Garra  |  Foco  |  Disciplina  |  Perseverânça  |  Ser Estudioso  |  Ter Sede de Conhecimento | Interesse por Tecnologia</td> 
+                <td> Força de Vontade | Garra | Foco | Disciplina | Dedicação | Determinação | Empenho | Perseverânça | Sede de Conhecimento | Gosto por Novos Desafios | Interesse pela área de Tecnologia | Ser Estudioso  </td> 
             </tr>
           </table>
     </section><br>
-    <!----------------------------------------- Seção-05: Link Externo --------------------------------------------------->
+    <!----------------------------------------- Seção-05: Link Externo ------------------------------------------------->
     <nav>
         <a href="https://www.betrybe.com/?utm_source=trybe.com.br" target="blank"> 
             Conheça mais sobre a Trybe! 
         </a>
     </nav>
-    <!------------------------------------------  Seção-06: Informações de Rodapé ---------------------------------------->
+    <!----------------------------------------- Seção-06: Informações de Rodapé ---------------------------------------->
     <footer id="rodape">
         Todos os direitos reservados, Jhonatan Coutinho Rangel
     </footer>
-    <!------------------------------------------------------------------------------------------------------------>
+    <!------------------------------------------------------------------------------------------------------------------>
 </body>
-<!--====================================================================================================================--> 
+<!--==================================================================================================================--> 
 </html>
