--- a/index.html
+++ b/index.html
@@ -59,14 +59,20 @@
         <section id="sobre_mim" class="lado-esquerdo">
             <article>
                 <p>
-                    Sou estudante de engenharia eletrônica na Universidade Tecnológica Federal do Paraná campus de Campo Mourão, sempre demonstrei interesse pela área de tecnologia, e hoje busco me aprofundar na área deembarcados e desenvolvimento de software. Neste ano conheci a <span class="trybe">Trybe</span> e fiz a escolha de participar do processo seletivo, hoje estou a menos de um mês estudando, mas já posso perceber o quanto evolui e o longo caminho de aprendizado que existe pela frente!
+                    Sou estudante de engenharia eletrônica na Universidade Tecnológica Federal do Paraná campus de Campo
+                    Mourão, sempre demonstrei interesse pela área de tecnologia, e hoje busco me aprofundar na área
+                    deembarcados e desenvolvimento de software. Neste ano conheci a <span class="trybe">Trybe</span> e
+                    fiz a escolha de participar do processo seletivo, hoje estou a menos de um mês estudando, mas já
+                    posso perceber o quanto evolui e o longo caminho de aprendizado que existe pela frente!
                 </p>
             </article>
         </section>
         <section id="aprendizado" class="lado-direito">
             <aside>
                 <p>
-                    <em>Algo que prezo muito e vejo que aqui será passado de uma maneira clara é o fluxo de trabalho. Chegar na <span class="trybe">Trybe</span> e já receber uma aula de como utilizar o git e aprender o fluxo de como as coisas devem acontecer foi ótimo.</em>
+                    <em>Algo que prezo muito e vejo que aqui será passado de uma maneira clara é o fluxo de trabalho.
+                        Chegar na <span class="trybe">Trybe</span> e já receber uma aula de como utilizar o git e
+                        aprender o fluxo de como as coisas devem acontecer foi ótimo.</em>
                 </p>
             </aside>
         </section>
