--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header id="cabecalho">
-      <h1 class="titulo">Lições Aprendidas na Trybe!</h1>
+      <h1 id="titulo">Lições Aprendidas na Trybe!</h1>
       <nav>
         <ul>
           <li><a href="#">Home</a></li>
