--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
   <head>
     <meta charset="UTF-8">
     <title>"Felipe Shcolnik Profile"</title>
-    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
         <header id="cabecalho">
-                <h1 id="titulo" class="center">Felipe Shcolnik</h1>
+                <h1 id="titulo">Felipe Shcolnik</h1>
+                <img id="minha_foto" src="perfil_felipe_shcolnik.jpg" alt="foto_Felipe_Shcolnik">
         </header>
         <nav>
           <section id="main">
-            <img id="minha_foto" src="perfil_felipe_shcolnik.jpg" alt="foto_Felipe_Shcolnik">
             <section id="listas">
               <h2>Lições aprendidas</h2>
               <ol id="licoes_aprendidas">
