--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
             <img id="minha_foto" src="minha_foto.png" alt="Foto de Danrlley Rodrigues">
         </a>
             <article class="lado-esquerdo">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque viverra ultrices enim et pretium. Nulla facilisi. Etiam sed pharetra elit. Donec varius ex sit amet quam finibus lacinia. Pellentesque at tristique metus, at auctor ipsum. Sed ut luctus dui. Cras commodo justo eu lacus accumsan, at aliquet velit tempor. Duis luctus accumsan neque id viverra. Nullam nec justo interdum, ullamcorper nulla id, mollis nulla.
+                Sou estudante de Desenvolvimento de Software apaixonado por tecnologia, técnico em informática e com um pouco de experiência na área Administrativa. Sempre disposto a me envolver em projetos desafiadores. Amo participar de projetos voluntários para tentar impactar a vida das pessoas de forma positiva.
             </article>
             <aside class="lado-direito">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque viverra ultrices enim et pretium. Nulla facilisi. Etiam sed pharetra elit.
+                Estudante de Desenvolvimento de Software | Trybe<br>
+                Uma escola que em sua metodologia de ensino exige compromisso e autonomia, confiança, responsabilidade e transparência.
             </aside>
         <section>
             <h2>Lições</h2>
@@ -54,24 +55,19 @@
             </ul>
             <table>
                 <tr>
-                    <td>Lorem</td>
-                    <td>Ipsum</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
-                    <td>Lorem</td>
-                    <td>Ipsum</td>
+                    <td></td>
+                    <td>Hello World!</td>
+                    <td></td>
                 </tr>
                 <tr>
-                    <td>Lorem</td>
-                    <td>Ipsum</td>
-                </tr>
-                <tr>
-                    <td>Lorem</td>
-                    <td>Ipsum</td>
-                </tr>
-                <tr>
-                    <td>Lorem</td>
-                    <td>Ipsum</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
             </table>
         </section>
