--- a/index.html
+++ b/index.html
@@ -1,38 +1,42 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto 1</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-    <header id ="cabecalho"><h1> Projeto 1 - Lições aprendidas</h1>
-        <img src ="oie_7mbgcqpjn3sh.jpg" id="minha_foto">
+
+    <header><h1> Projeto 1 - Lições aprendidas</h1>
+        <img src ="oie_7mbgcqpjn3sh.jpg" class="foto">
     ￼    <nav>
     ￼      <ul>
+        <li>sdkscm</li>
+        <li>oiefjkf</li>
+
             </ul>
+
     ￼    </nav>
+
     ￼</header>
+
 <body>
-    <main id="licoes_aprendidas">
-            <ul>
-                1
-                2
-                3
-                4
-                5
-                6
-                7
-                8
-                9
-                10
-            </ul>   </main>
+    
+
     <article>
-        ocjdsn,dmsçdm
-        <section>
-            fwekdcsmçfmadsç
-        </section>
+            link externo
+      ocjdsn,dmsçdm
+
     </article>
+
+
+
+
+
+
     <footer class ="rodape"></footer>
+
 </body>
+
 </html>
