--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-    <header><h1> Projeto 1 - Lições aprendidas</h1>
-        <img src ="oie_7mbgcqpjn3sh.jpg" class="foto">
+    <header><h1 id="titulo"> Projeto 1 - Lições aprendidas</h1>
+        <img src ="oie_7mbgcqpjn3sh.jpg" id="minha_foto">
     ￼    <nav>
     ￼      <ul>
         <li>sdkscm</li>
-        <li>oiefjkf</li>
+        <li>oiefjkf</li>s
 
             </ul>
 
@@ -28,15 +28,42 @@
             link externo
       ocjdsn,dmsçdm
 
+            <section>
+                <ul id="licoes_aprendidas">
+                        <li>ehsgf</li>
+                        <li>wuefhj</li>
+                        <li>orwigj</li>
+                        <li>origel</li>
+                        <li>rlgjfgsg</li>
+                        <li>asrgvdffd</li>
+                        <li>oewigjhlkfdv</li>
+                        <li>sjghdfjg</li>
+                        <li>gasjhdjksndffkvc</li>
+                        <li>afsogjklkgf</li>
+                    </ul>
+                    <ul id="licoes_a_aprender">
+                        <li>ehsgf</li>
+                        <li>wuefhj</li>
+                        <li>orwigj</li>
+                        <li>origel</li>
+                        <li>rlgjfgsg</li>
+                        <li>asrgvdffd</li>
+                        <li>oewigjhlkfdv</li>
+                        <li>sjghdfjg</li>
+                        <li>gasjhdjksndffkvc</li>
+                        <li>afsogjklkgf</li>
+                    </ul>
+
+            </section>
     </article>
 
 
 
 
 
-
-    <footer class ="rodape"></footer>
-
+    <footer class ="rodape">lmlk</footer>
+    
 </body>
+
 
 </html>
