--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <head>
     <Meta charset="pt-br">
     <title>TRYBE-Desafio: Lessons Learned</title>
-    <link rel="stylesheet" href="style.css">      
+    <link rel="stylesheet" href="style.css">  
 </head>
 <body>
-    <header id="cabecalho">Lições Aprendidas - Trybe!</header>
-    <img src="lenilsom.jpg" alt="foto de Lenilsom" width="300px">    
-    <ol>
+    <header id="cabecalho"><h1 id="titulo">Lições Aprendidas - Trybe!</h1></header>
+    <img  id="minha_foto" src="lenilsom.jpg" alt="foto de Lenilsom" width="300px">    
+    <ol id="licoes_aprendidas" >
         <li>Fundamentos: Unix, Shell e Kernel;</li>
         <li>Terminal: Trabalhando com diretórios e arquivos;</li>
         <li>Git e GitHub: O que são e para que servem;</li>
@@ -19,7 +19,7 @@
         <li>HTML e CSS: Seletores e posicionamento;</li>
         <li>HTML semântico.</li>
     </ol>
-    <ul>
+    <ul id="licoes_a_aprender" >
         <li>JavaScript: front-End e Back-End;</li>
         <li>Logica de programação;</li>
         <li>Jest</li>
@@ -31,7 +31,10 @@
         <li>Context API</li>
         <li>MongoDB</li>
     </ul>
-    <p>Artigo sobre seu aprendizado: O aprendizado é um processo desafiador. Ele convida os indivíduos a trilharem caminhos ainda inexplorados em suas trajetórias de vida. Amo a sensação de ter aprendido algo novo, isto me faz compreender que sempre existe o que melhorar. Acredito que a medida que aprendemos nos tornamos cidadãos mais conscientes e aptos a exercer os nossos direitos. Tenho visto coisas fascinantes em minha, ainda curta, trajetória como estudante na Trybe, tenho plena confiança no trabalho que tem sido realizado por mim e por cada pessoa envolvida nesta caminhada rumo ao sucesso.</p>
-    <p>Quando começamos o curso, eu nunca havia trabalhado com linhas de comando e, à medida que começamos ao utilizar na trybe, eu pude perceber como nós conhecemos pouco sobre a operação de sistemas de uma forma mais poderosa.
-    </p>
+    <article> Meu aprendizado: O aprendizado é um processo desafiador. Ele convida os indivíduos a trilharem caminhos ainda inexplorados em suas trajetórias de vida. Amo a sensação de ter aprendido algo novo, isto me faz compreender que sempre existe o que melhorar. Acredito que a medida que aprendemos nos tornamos cidadãos mais conscientes e aptos a exercer os nossos direitos. Tenho visto coisas fascinantes em minha, ainda curta, trajetória como estudante na Trybe, tenho plena confiança no trabalho que tem sido realizado por mim e por cada pessoa envolvida nesta caminhada rumo ao sucesso. </article>
+    <aside> Quando começamos o curso, eu nunca havia trabalhado com linhas de comando e, à medida que começamos ao utilizar na trybe, eu pude perceber como nós conhecemos pouco sobre a operação de sistemas de uma forma mais poderosa.
+    </aside>
+    <footer id="rodape" >
+
+    </footer>
 </body>
