Alterando mais uma vez

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-    <header><h1 id="titulo"> Projeto 1 - Lições aprendidas</h1>
+    <header id="cabecalho"><h1 id="titulo"> Projeto 1 - Lições aprendidas</h1>
         <img src ="oie_7mbgcqpjn3sh.jpg" id="minha_foto">
     ￼    <nav>
     ￼      <ul>
         <li>sdkscm</li>
-        <li>oiefjkf</li>s
+        <li>oiefjkf</li>
 
             </ul>
 
@@ -22,7 +22,7 @@
     ￼</header>
 
 <body>
-    
+
 
     <article>
             link externo
@@ -62,8 +62,7 @@
 
 
     <footer class ="rodape">lmlk</footer>
-    
-</body>
 
+</body>
 
 </html>
