--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
         <section>
             <h2>Lições</h2>
-            <article>
-                <h3>Aprendidas</h3>
-                <ol id="licoes_aprendidas">
+            <article id="licoes_aprendidas">
+                <h3 id="titulo-aprendidas">Aprendidas</h3>
+                <ol>
                     <li>XXXXXXXXXX</li>
                     <li>XXXXXXXXXX</li>
                     <li>XXXXXXXXXX</li>
