--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lições Aprendidas!</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="reset.css" />
   </head>
   <body>
     <header id="cabecalho">
@@ -13,7 +12,7 @@
       <nav>
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="#licoes_aprendidas">Lições</a></li>
+          <li><a href="#lado">Lições</a></li>
           <li><a href="#rodape">Contato</a></li>
         </ul>
       </nav>
