Adicionando barra no canto superior

--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
     <header id="cabecalho"><h1 id="titulo"> Projeto 1 - Lições aprendidas</h1>
         <img src ="oie_7mbgcqpjn3sh.jpg" id="minha_foto">
     ￼    <nav>
-    ￼      <ul>
-        <li>sdkscm</li>
-        <li>oiefjkf</li>
-
-            </ul>
+         <ul>
+    <li>sdkscm</li>
+    <li>oiefjkf</li>
+        </ul>
 
     ￼    </nav>
 
@@ -24,12 +23,15 @@
 <body>
 
 
-    <article>
-            link externo
-      ocjdsn,dmsçdm
+    <article> <h2>TITUOLO ARTIGO</h2>
 
-            <section>
-                <ul id="licoes_aprendidas">
+            link externo
+            Lorem Ipsum
+            "Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."
+            "Der findes ingen, som holder af smerten, søger efter den eller vil have den, bare fordi den er smerte..."
+
+            <section> 
+                <ul id="licoes_aprendidas"><h3> Lições aprendidas</h3>
                         <li>ehsgf</li>
                         <li>wuefhj</li>
                         <li>orwigj</li>
@@ -41,7 +43,8 @@
                         <li>gasjhdjksndffkvc</li>
                         <li>afsogjklkgf</li>
                     </ul>
-                    <ul id="licoes_a_aprender">
+                    
+                    <ul id="licoes_a_aprender"><h3>Lições a aprender</h3>
                         <li>ehsgf</li>
                         <li>wuefhj</li>
                         <li>orwigj</li>
