--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             "Der findes ingen, som holder af smerten, søger efter den eller vil have den, bare fordi den er smerte..."
 
             <section> 
+
                 <ul id="licoes_aprendidas"><h3> Lições aprendidas</h3>
                         <li>ehsgf</li>
                         <li>wuefhj</li>
@@ -43,8 +44,8 @@
                         <li>gasjhdjksndffkvc</li>
                         <li>afsogjklkgf</li>
                     </ul>
-                    
-                    <ul id="licoes_a_aprender"><h3>Lições a aprender</h3>
+
+                    <aside><ul id="licoes_a_aprender"><h3>Lições a aprender</h3>
                         <li>ehsgf</li>
                         <li>wuefhj</li>
                         <li>orwigj</li>
@@ -55,11 +56,10 @@
                         <li>sjghdfjg</li>
                         <li>gasjhdjksndffkvc</li>
                         <li>afsogjklkgf</li>
-                    </ul>
+                    </ul></aside>
 
-            </section>
+                </section>
     </article>
-
 
 
 
