Aplicação do vertical-align na tag aside

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1 id="titulo">Lições aprendidas - Trybe!</h1>
             <nav id="menu">
                 <ul>
-                    <li><a>Home</a></li>
+                    <li><a>Ínicio</a></li>
                     <li><a>Habilidades</a></li>
                     <li><a>Contato</a></li>
                 </ul>
@@ -22,7 +22,7 @@
         <main>
             <img id="minha_foto" src="fotome.jpg" alt="Vinicius Palenske">
             <div id="caixa_licoes">
-                <h2>Skills</h2>
+                <h2>Habilidades</h2>
                 <ol class="lado-esquerdo" id="licoes_aprendidas">
                     <h3>Lições aprendidas</h3>
                     <li>Aprender a aprender</li>
@@ -55,54 +55,95 @@
                 <section class="sessao" id="texto-principal">
                     <h3>Dias na tribo</h3>
                     <br>
-                    <p>O que é Lorem Ipsum?<br>Dias na tribo O que é Lorem Ipsum? Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker. Porque nós o usamos? É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. A vantagem de usar Lorem Ipsum é que ele tem uma distribuição normal de letras, ao contrário de "Conteúdo aqui, conteúdo aqui", fazendo com que ele tenha uma aparência similar a de um texto legível. Muitos softwares de publicação e editores de páginas na internet agora usam Lorem Ipsum como texto-modelo padrão, e uma rápida busca por 'lorem ipsum' mostra vários websites ainda em sua fase de construção. Várias versões novas surgiram ao longo dos anos, eventualmente por acidente, e às vezes de propósito (injetando humor, e coisas do gênero). Várias versões novas surgiram ao longo dos anos, eventualmente por acidente, e às vezes de propósito (injetando humor, e coisas do gênero). Várias versões novas surgiram ao longo dos anos, eventualmente por acidente, e às vezes de propósito (injetando humor, e coisas do gênero). Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker. Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker. 
+                    <p>
+                        Dolor varius accumsan sapien interdum rutrum posuere placerat iaculis, sociosqu aenean risus tellus est enim scelerisque ultrices, convallis curae bibendum netus posuere duis aliquam. 
+                        inceptos euismod rhoncus placerat aliquet, placerat eu nec pharetra torquent, habitant aliquam lorem. 
+                        volutpat placerat posuere laoreet nisi molestie urna dolor pulvinar eros, porttitor amet pharetra potenti non scelerisque donec nulla lacus, habitasse proin sapien sollicitudin ac viverra sed in. 
+                        sapien donec senectus integer sagittis tempus vestibulum inceptos nostra curabitur maecenas, aliquam eleifend purus fames adipiscing donec lacus non bibendum, sed sollicitudin etiam ut vehicula vitae dapibus odio eleifend. 
                     </p>
-                </section>
-                <section class="sessao">
-                    <h3>Tabela de aprendizado</h3><br>
-                    <table id="dificuldade_skills">
-                        <tr>
-                            <th>Dificudade</th>
-                            <th>Fácil</th>
-                            <th>Médio</th>
-                            <th>Difícil</th>
-                        </tr>
-                        <tr>
-                            <td> UNIX </td>
-                            <td>X</td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td> BASH </td>
-                            <td></td>
-                            <td>X</td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td> HTML </td>
-                            <td></td>
-                            <td>X</td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td> CSS </td>
-                            <td></td>
-                            <td></td>
-                            <td>X</td>
-                        </tr>
-                    </table>
+                    <p>
+                        Rhoncus sociosqu sem duis sem facilisis adipiscing curae volutpat, elementum tortor sollicitudin risus himenaeos imperdiet dictum. 
+                        sociosqu purus viverra orci ullamcorper consectetur malesuada urna fames mauris nisl sit phasellus, habitasse dapibus quam proin vitae sapien etiam vulputate tincidunt auctor turpis. 
+                        sem auctor tempus etiam sodales a aenean platea, vel mollis vestibulum himenaeos inceptos per, fringilla taciti duis semper lorem sapien. 
+                        mauris vulputate massa rutrum nostra a enim cubilia, hendrerit ut nostra interdum sapien ultricies eu ut, eget donec elementum ultrices eget vestibulum. 
+                        lacus habitant lacus magna sagittis arcu sodales duis quisque id auctor, diam condimentum purus risus ultricies aenean ut euismod morbi. 
+                    </p>
+                    <p>
+                        Eget libero morbi nunc pellentesque gravida vulputate torquent neque consequat, porttitor habitant cursus erat ultrices quis risus volutpat senectus, eu ultrices ac curabitur velit neque porttitor blandit. 
+                        donec ac sapien rutrum enim, aptent porta interdum, in sociosqu integer. 
+                        sociosqu elit himenaeos in vel netus pulvinar donec, pulvinar ante nibh curabitur netus aptent, tincidunt vestibulum aliquet nulla praesent sit. 
+                        conubia magna lacus convallis ligula torquent donec ullamcorper elementum amet sodales placerat, posuere conubia massa tellus nam ipsum lorem dictum conubia tincidunt. 
+                        curae laoreet cras pharetra fusce imperdiet diam nec ultrices, viverra erat tellus in neque euismod nisi turpis, sem eros quisque felis luctus amet proin. 
+                    </p>
+                    <p>
+                        Pellentesque felis congue commodo litora auctor dictumst taciti, mi curae facilisis himenaeos aenean hendrerit rhoncus volutpat, tempus donec ac justo faucibus amet. 
+                        tempus nulla at accumsan libero sodales etiam integer, non netus metus euismod curabitur ullamcorper. 
+                        posuere habitant dictum ullamcorper senectus odio ligula vehicula tempus, purus lectus leo porta morbi et varius urna mattis, tempor condimentum dapibus aenean ut taciti lacinia. 
+                        duis commodo auctor per netus fermentum ac non taciti, senectus augue inceptos curabitur mauris quam aliquet et, odio quisque varius primis cras nibh egestas. 
+                        eget ligula at eu sagittis molestie integer aliquam ad, fringilla ligula justo aenean porttitor convallis consequat. 
+                    </p>
                 </section>
             </article>
         </main>
         <aside id="canto">
-            <h2>Momentos</h2>
+            <h2>Momentos x Aprendizado</h2>
             <section class="sessao">
                 <h3>O dia em que eu aprendi a usar o Github</h3><br>
-                <p>De onde ele vem?<br>
-                    Porque nós o usamos? É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. A vantagem de usar Lorem Ipsum é que ele tem uma distribuição normal de letras, ao contrário de "Conteúdo aqui, conteúdo aqui", fazendo com que ele tenha uma aparência similar a de um texto legível. Muitos softwares de publicação e editores de páginas na internet agora usam Lorem Ipsum como texto-modelo padrão, e uma rápida busca por 'lorem ipsum' mostra vários websites ainda em sua fase de construção. Várias versões novas surgiram ao longo dos anos, eventualmente por acidente, e às vezes de propósito (injetando humor, e coisas do gênero). Várias versões novas surgiram ao longo dos anos, eventualmente por acidente, e às vezes de propósito (injetando humor, e coisas do gênero). Várias versões novas surgiram ao longo dos anos, eventualmente por acidente, e às vezes de propósito (injetando humor, e coisas do gênero). Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos.
+                <p>
+                    Consequat et etiam dui id velit turpis accumsan, eget commodo scelerisque hac scelerisque tortor amet, urna quis ut porttitor class mauris. 
+                    donec ad etiam curabitur purus scelerisque, malesuada enim condimentum sapien purus enim, a per taciti vel. 
+                    sit orci imperdiet eros metus dapibus luctus nunc pulvinar felis imperdiet, magna class pretium vitae pellentesque eleifend curabitur fringilla volutpat per ac, ornare enim pretium odio dolor sociosqu justo mauris euismod. 
+                    tellus fusce inceptos phasellus fermentum nullam congue et dolor etiam, lectus nibh litora euismod justo suspendisse accumsan ad malesuada, egestas proin vestibulum taciti turpis cubilia lectus consequat. 
+                </p>
+                <p>
+                    Cubilia tellus ac hac purus platea libero, facilisis magna platea primis elementum, aliquet ad vitae ligula elit. 
+                    per pharetra consequat vestibulum phasellus suspendisse, per ut cursus ante enim, arcu nunc dui ultrices. 
+                    donec facilisis vitae faucibus platea ornare varius, rutrum orci justo cubilia senectus blandit, pellentesque quis vulputate dictumst in. 
+                    consequat sollicitudin luctus magna imperdiet ultricies volutpat, lectus odio tortor commodo dolor fames, quam accumsan venenatis non sollicitudin. 
+                    neque fames nec malesuada dapibus amet fermentum ante quam sem lorem, sed accumsan leo hac erat integer vehicula viverra congue cras conubia, id in platea mattis mollis proin tortor aenean cubilia. 
+                </p>
+                <p>
+                    Sapien venenatis sem consectetur, arcu curabitur. 
                 </p>
             </section>
+            <div id="tabela">
+                <h3>Tabela de aprendizado</h3><br>
+                <table id="dificuldade_skills">
+                    <tr>
+                        <th>Dificudade</th>
+                        <th>Fácil</th>
+                        <th>Médio</th>
+                        <th>Difícil</th>
+                    </tr>
+                    <tr>
+                        <td> UNIX </td>
+                        <td>X</td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td> BASH </td>
+                        <td></td>
+                        <td>X</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td> HTML </td>
+                        <td></td>
+                        <td>X</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td> CSS </td>
+                        <td></td>
+                        <td></td>
+                        <td>X</td>
+                    </tr>
+                </table>
+            </div>
+            <p>
+                Sapien venenatis sem consectetur, arcu curabitur. 
+            </p>
         </aside>
         <footer id="rodape"> <p>Direitos reservados a mim.<br><a href="https://github.com/palenske" target="_blank"><p>GitHub</p></a>- 2020, um ano muito louco -</p></footer>
     </body>
