adicionando link externo

--- a/index.html
+++ b/index.html
@@ -25,11 +25,19 @@
 
     <article> <h2>TITUOLO ARTIGO</h2>
 
-            link externo
             Lorem Ipsum
             "Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."
             "Der findes ingen, som holder af smerten, søger efter den eller vil have den, bare fordi den er smerte..."
-
+            Lorem Ipsum
+            "Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."
+            "Der findes ingen, som holder af smerten, søger efter den eller vil have den, bare fordi den er smerte..."
+            Lorem Ipsum
+            "Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."
+            "Der findes ingen, som holder af smerten, søger efter den eller vil have den, bare fordi den er smerte..."
+            Lorem Ipsum
+            "Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."
+            "Der findes ingen, som holder af smerten, søger efter den eller vil have den, bare fordi den er smerte..."
+            <a href="https://github.com/MarinaAlane" target="_blank">GitHub</a>
             <section> 
 
                 <ul id="licoes_aprendidas"><h3> Lições aprendidas</h3>
@@ -64,7 +72,7 @@
 
 
 
-    <footer class ="rodape">lmlk</footer>
+    <footer id ="rodape">lmlk</footer>
 
 </body>
 
